2001-12-28  Hironori Sakamoto <h-saka@lsi.nec.co.jp>

	* [w3m-dev 02765] backend
	* backend.c (internal_get): cleanups
	* file.c (flushline): remove w3m_backend checks
	* file.c (loadHTMLstream): add w3m_backend check
	* fm.h (backend_halfdump_str): deleted
	* fm.h (backend_halfdump_buf): added

2001-12-28  Kiyokazu SUTO <suto@ks-and-ks.ne.jp>

	* [w3m-dev 02761]
	* file.c (loadcmdout): remove unnecessary buf check

2001-12-28  Hironori Sakamoto <hsaka@mth.biglobe.ne.jp>

	* [w3m-dev 02760]
	* file.c (getshell): check buf == NULL
	* main.c (execdict): check buf == NULL
		buf->type == NULL, then buf->type is set as "text/plain"

2001-12-28  Hironori Sakamoto <hsaka@mth.biglobe.ne.jp>

	* [w3m-dev 02759] fold textarea
	* fm.h (FoldTextarea): added
	* form.c (formUpdateBuffer): check FoldTextarea
	* rc.c (CMT_FOLD_TEXTAREA): added
	* rc.c (params1): add "fold_textarea"

2001-12-28  Hironori Sakamoto <hsaka@mth.biglobe.ne.jp>

	* [w3m-dev 02757]
	* main.c (execdict): w = conv_from_system(word)
	* main.c (dictword): call execdict() only

2001-12-27  Fumitoshi UKAI  <ukai@debian.or.jp>

	* url.c (openSSLHandle): accept_this_file is out of 
					#ifdef USE_SSL_VERIFY

2001-12-27  Hironori Sakamoto <hsaka@mth.biglobe.ne.jp>

	* [w3m-dev 02753]
	* url (ssl_verify_error_string): deleted
	* url.c (openSSLHandle): use X509_verify_cert_error_string()

2001-12-27  Fumitoshi UKAI  <ukai@debian.or.jp>

	* [w3m-dev 02750] RFC2818 server identity check
	* istream.c (ssl_certificate_validity): added
	* istream.c (ssl_set_certificate_validity): added
	* istream.c (ssl_get_certificate): use ssl_certificate_validity
	* istream.h (ssl_set_certificate_validity): added
	* url.c (ssl_verity_error_string): added
	* url.c (openSSLHandle): add accept_this_site
	* url.c (openSSLHandle): dont check by SSL_VERIFY_PEER,
		use SSL_get_verify_result() instead
	* url.c (openSSLHandle): check peer_certificate() and then
		SSL_get_verify_result()

2001-12-27  Hironori Sakamoto <hsaka@mth.biglobe.ne.jp>